--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1"
   }
